--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 <body>
+    <h1>test commit</h1>
     <div class="wrapper">
         <header class="header">
             <div class="container">
